force-app/main/default/objects/LocationH__c/LocationH__c.object-meta.xml
<CustomObject>
    <label>LocationH</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LocationsH</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>