force-app/main/default/objects/LocationH__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>CustomerH__r.Street_Address__c  &amp; &quot; &quot; &amp;  CustomerH__r.State__c  &amp; &quot; &quot; &amp; CustomerH__r.Zip_Code__c</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>