force-app/main/default/objects/LocationH__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>A descriptive name for the location</description>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queens</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Manhattan</fullName>
            </value>
            <value>
                <fullName>Long Island</fullName>
            </value>
            <value>
                <fullName>Bronx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>