force-app/main/default/objects/LocationH__c/fields/Chef__c.field-meta.xml
<CustomField>
    <fullName>Chef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the location to a specific recipe owner who delivers to or operates from this location.</description>
    <label>Chef</label>
    <referenceTo>Chef__c</referenceTo>
    <relationshipLabel>LocationsH</relationshipLabel>
    <relationshipName>LocationsH</relationshipName>
    <type>Lookup</type>
</CustomField>