force-app/main/default/objects/LocationH__c/fields/CustomerH__c.field-meta.xml
<CustomField>
    <fullName>CustomerH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the location to a customer to take address info</description>
    <label>CustomerH</label>
    <referenceTo>CustomerH__c</referenceTo>
    <relationshipLabel>LocationsH</relationshipLabel>
    <relationshipName>LocationsH</relationshipName>
    <type>Lookup</type>
</CustomField>